<resources>
    <string name="app_name">MovieApp</string>
    <string name="user_greet">Welcome\n%1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send_email">send email</string>
    <string name="dismiss">dismiss</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="sign_in_btn">sign in</string>
    <string name="already_have_an_account_login">Already Have an account? Login</string>
    <string name="imglogo">imgLogo</string>
    <string name="loading">…</string>
    <string name="movies">Movies</string>
    <string name="saved_movies">Bookmarks</string>
    <string name="icon_save_movie">icon save movie</string>
    <string name="undo">Undo</string>
    <string name="movie_deleted">"Successfully deleted"</string>
    <string name="icon_profile">iconProfile</string>
    <string name="enter_email_password">Enter email and password</string>
    <string name="email_not_exist">Email does not exist</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">sign up</string>
    <string name="create_an_account">Create an Account</string>
    <string name="or">or</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="iconGoogle">iconGoogle</string>

    <string name="channel_name">name</string>
    <string name="channel_id">notification_channel</string>
    <string name="comment">comments</string>

    <string name="title_notification">Notification</string>
    <string name="message">Notification is work</string>
    <string name="iconlogout">iconLogOut</string>


</resources>