<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_forgot_password">

    <TextView
        android:id="@+id/tvPassword"
        style="@style/styleTvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmailIl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:hint="@string/enter_email_address"
        style="@style/CustomOutlineBox"
        app:layout_constraintTop_toBottomOf="@id/tvPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailForgot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendEmail"
        style="@style/btnStyleForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_40dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:paddingStart="@dimen/padding_8dp"
        android:paddingEnd="@dimen/padding_8dp"
        android:text="@string/send_email"
        android:layout_marginBottom="@dimen/margin_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmailIl" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDismiss"
        style="@style/btnStyleForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_40dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:text="@string/dismiss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmailIl" />
</androidx.constraintlayout.widget.ConstraintLayout>