<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="loginFragment"
            type="com.example.firebaseauthentication.presentation.fragments.login.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".presentation.fragments.login.LoginFragment">

        <ImageView
            android:id="@+id/ivLogoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_25dp"
            android:contentDescription="@string/imglogo"
            android:src="@drawable/ic_play_button"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSignInLogin"
            style="@style/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogoLogin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailIl"
            style="@style/CustomOutlineBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/margin_30dp"
            android:hint="@string/email"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tvSignInLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="2"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPassword"
            style="@style/CustomOutlineBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_60dp"
            android:layout_marginStart="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/margin_30dp"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@id/etEmailIl"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgotPassword"
            style="@style/styleTvAdditionalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:text="@string/forgot_your_password"
            app:layout_constraintBottom_toTopOf="@id/btnSignIn"
            app:layout_constraintEnd_toEndOf="@id/ilPassword"
            app:layout_constraintTop_toBottomOf="@id/ilPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            style="@style/btnStyleSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:layout_marginStart="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_50dp"
            android:layout_marginEnd="@dimen/margin_30dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> loginFragment.onClickSignIn()}"
            android:text="@string/sign_in_btn"
            app:layout_constraintBottom_toTopOf="@id/tvSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ilPassword" />

        <TextView
            android:id="@+id/tvSignUp"
            style="@style/styleTvAdditionalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> loginFragment.onClickRegister()}"
            android:text="@string/don_t_have_an_account_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

        <include
            android:id="@+id/divider"
            layout="@layout/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            app:layout_constraintBottom_toTopOf="@id/tvGoogleSignIn"
            app:layout_constraintTop_toBottomOf="@id/tvSignUp" />

        <include
            layout="@layout/signin_with_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            app:baseFragment="@{loginFragment}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>