<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="moviesFragment"
            type="com.example.firebaseauthentication.presentation.fragments.movies.MoviesFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="@dimen/size_40dp"
            android:layout_marginStart="@dimen/margin_25dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:contentDescription="@string/icon_profile"
            android:src="@drawable/ic_play_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TODO rename -->
        <ImageView
            android:id="@+id/ivLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> moviesFragment.onClickGoBack()}"
            android:src="@drawable/ic_logoutt"
            app:layout_constraintBottom_toTopOf="@id/rvMovies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/iconlogout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNameUser"
            style="@style/styleTvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/user_greet"
            app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
            app:layout_constraintStart_toEndOf="@+id/ivProfile"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBarMovies"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_32dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/rvMovies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMovies"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:orientation="vertical"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivProfile"
            app:spanCount="2" />

<!--        <View-->
<!--            android:id="@+id/vSpace"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/size_60dp"-->
<!--            android:background="@android:color/transparent"-->
<!--            android:visibility="invisible"-->
<!--            app:layout_constraintTop_toBottomOf="@id/rvMovies"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>